--- a/alura_projeto_spark.ipynb
+++ b/alura_projeto_spark.ipynb
@@ -54,7 +54,7 @@
         "id": "Rc3Adto4jWDj"
       },
       "source": [
-        "### [PySpark](https://spark.apache.org/docs/3.1.2/api/python/index.html)\n",
+        "### [PySpark](https://github.com/jurodriguesc/alura_spark/blob/806e858991251da5d3a2a1459eb42e1be4ba8e89/img-001.png)\n",
         "\n",
         "PySpark é uma interface para Apache Spark em Python. Ele não apenas permite que você escreva aplicativos Spark usando APIs Python, mas também fornece o *shell* PySpark para analisar interativamente seus dados em um ambiente distribuído. O PySpark oferece suporte à maioria dos recursos do Spark, como Spark SQL, DataFrame, Streaming, MLlib (Machine Learning) e Spark Core.\n",
         "\n",
